--- a/nx.json
+++ b/nx.json
@@ -10,5 +10,13 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "import-test-app": {
+      "tags": []
+    },
+    "import-test-app-e2e": {
+      "tags": [],
+      "implicitDependencies": ["import-test-app"]
+    }
+  }
 }
